fix(MobileCalendar): fix trigger click area on iOS

--- a/src/components/DatePicker/MobileCalendar.scss
+++ b/src/components/DatePicker/MobileCalendar.scss
@@ -41,7 +41,8 @@ $block: '.#{variables.$ns}mobile-calendar';
         inset-inline-start: 0;
 
         box-sizing: border-box;
-        width: 100%;
+        // width: 100% does not work in mobile Safari
+        min-width: 100%;
         height: 100%;
         margin: 0;
         padding: 0;
@@ -56,7 +57,7 @@ $block: '.#{variables.$ns}mobile-calendar';
             inset-block-start: 0;
             inset-inline-start: 0;
 
-            width: 100%;
+            min-width: 100%;
             height: 100%;
             margin: 0;
             padding: 0;
